fix weird font rendering on safari

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+html {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+}
+
 body {
   color: #333;
   margin: 1em auto 2em auto;
